Bug 1971401 - Make `EventTargetData::AssertIfEventTargetContentAndFrameContentMismatch()` handle `<area>` element in a specific path r=smaug

Pointer/Mouse events in a link in an image map are targeted to the
`<area>` element, but the event target frame is the image frame.
Therefore, `mContent == mFrame->GetContent()` fails in this case (
mContent is the `<area>` and `mFrame` is the frame for `<img>`).

The assertion failure happens when `DispatchPrecedingPointerEvent`
is called with a pointer capturing element.  Then, `SetFrameAndContent`
is called with the image frame and `<area>` element [1].

So, the assertion failure is just a bug of the assertion itself. It
should accept `mFrame == mContent->GetPrimaryFrame()` if `mContent` is
an `<area>` element.

1. https://searchfox.org/mozilla-central/rev/53acdf9ea724c7fc85cfc259e0acf7663f4d34b8/layout/base/PresShell.cpp#8232-8233

Differential Revision: https://phabricator.services.mozilla.com/D255722